--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,7 @@
+R2.1.0-0.1.3    2024-11-22 Jeremy Lorelli
+	Update to motor/R6.9-ess-0.0.2, asyn/R4.35-0.0.2, seq/R2.2.4-1.2, sscan/R2.10.2-1.1.0
+	Changes to support building for rocky9
+
 R2.1.0-0.1.1	2019-09-23 Bruce Hill
 	Update to calc/R3.7-1.0.1
 
