--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R2.1.0-0.1.4    2025-02-10 Jeremy Lorelli
+    Update to asyn/R4.39-1.0.2, motor/R6.9-ess-0.0.3
+
 R2.1.0-0.1.3    2024-11-22 Jeremy Lorelli
 	Update to motor/R6.9-ess-0.0.2, asyn/R4.35-0.0.2, seq/R2.2.4-1.2, sscan/R2.10.2-1.1.0
 	Changes to support building for rocky9
